# mlflow_logging_example

./: .gitignore  README.md  analyze_assistent_dev_server.py  analyze_trace_data.py  ask_assistant.sh  clean_data.sh  default.py  domino_eval_run.py  env.sh  eval.py  mlflowtest.py  openai_test.py  pyproject.toml  test_server.sh  tracetest.py  trackingserver.sh
production/: README.md  agent.py  ai_system_config.yaml  build_production_evaluation_dataset.py  db.py  domino_eval_trace.py  evaluate_answer_question_with_context.py  evaluate_answer_question_with_context_dev.py  evaluate_answer_question_with_context_prod.py  evaluators.py  mlflowsupporttest.py  rag.py  server.py  tools.py  util.py
