[project]
name = "mlflow-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "mlflow==3.0.0",
    "openai>=1.85.0",
    "psutil>=7.0.0",
    "pyspark>=4.0.0",
    "scikit-learn>=1.7.0",
]
