[project]
name = "mlflow-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "fastapi[standard]>=0.115.12",
    "langchain-openai>=0.3.24",
    "langchain>=0.3.25",
    "openai>=1.85.0",
    "psutil>=7.0.0",
    "pyspark>=4.0.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
    "mlflow==3.0.0",
    "opentelemetry-exporter-otlp>=1.34.1",
]
